# RapidFit

./: .gitignore  .project  CMakeLists.txt  Makefile  README.md
config/: 110227-ExampleFor_Bs2JPsiPhi_SignalAlt_MO_TaggedFit.xml  110227-ExampleFor_Bs2JPsiPhi_SignalAlt_MP_UntaggedFit.xml  Bd2JpsiKstar_withAverageAngAcc.xml  Bs2JpsiPhiConfigFile.xml  Bs2JpsiPhi_withAverageAngAcc.xml  Bs2JpsiPhi_withAverageAngAcc_flat.xml  DC06Toy_noBkg.xml  ExampleConfigFile.xml  MC09Toy_noBkg.xml  MC09Toy_noBkg_EvtGen.xml  RaPDFToy.xml  RaPDFToy_DsPi.xml  RaPDFToy_DsPi_mass.xml  RaPDFToy_DsPi_withMas_PTAcc.xml  RaPDFToy_noBkg.xml  RaPDFToy_noBkg_AsciiFile.xml  RaPDFToy_noBkg_RootFile.xml  RaPDFToy_noBkg_withTimeRes.xml  RaPDF_Bs2DsPi.xml  RaPDF_Bs2JpsiPhiConfigFile.xml  RaPDF_Bs2JpsiPhi_sWave_ConfigFile.xml  RaPDF_Bs2JpsiPhi_sWave_ConfigFile2.xml  RaPDF_Bs2PhiPhi.xml  data_newEvtGen_100k_lhcb_convention_mistag0.txt  testMultipleDataSources.xml  test_10k.root
config/CVS/: Entries  Repository  Root
config/beta_s_validation/: beta_s_validation-3.xml  beta_s_validation-4.xml
config/betas_tagged_analysis/: tagged_cfit_3.xml  tagged_cfit_3_free.xml  tagged_cfit_5.xml  tagged_cfit_unbiased.xml  tagged_sfit_3.xml  tagged_sfit_5.xml  tagged_sfit_unbiased.xml
config/sWave_note/: sWave_Rs0.05fixed_ds0fixed_Phis0.0368.xml  sWave_Rs0.05fixed_ds0fixed_Phis0.5.xml  sWave_Rs0.05fixed_ds1.57fixed_Phis0.0368.xml  sWave_Rs0.05fixed_ds1.57fixed_Phis0.5.xml  sWave_Rs0.05float_ds0float_Phis0.0368.xml  sWave_Rs0.05float_ds0float_Phis0.5.xml  sWave_Rs0.05float_ds1.57float_Phis0.0368.xml  sWave_Rs0.05float_ds1.57float_Phis0.5.xml  sWave_Rs0.1fixed_ds0fixed_Phis0.0368.xml  sWave_Rs0.1fixed_ds0fixed_Phis0.5.xml  sWave_Rs0.1fixed_ds1.57fixed_Phis0.0368.xml  sWave_Rs0.1fixed_ds1.57fixed_Phis0.5.xml  sWave_Rs0.1float_ds0float_Phis0.0368.xml  sWave_Rs0.1float_ds0float_Phis0.5.xml  sWave_Rs0.1float_ds1.57float_Phis0.0368.xml  sWave_Rs0.1float_ds1.57float_Phis0.5.xml  sWave_Rs0fixed_ds0fixed_Phis0.0368.xml  sWave_Rs0fixed_ds0fixed_Phis0.5.xml
doc/: CMAKE-HOWTO.txt  COMMAND_LINE_ARGUMENTS.txt  ECDF-2DScan-HOWTO.txt  RapidFit_doxygen.cfg  example-scan.xml  release.notes  todo.list
doc/CVS/: Entries  Repository
framework/CVS/: Repository
framework/include/: AcceptReject.h  AcceptanceSlice.h  AngularAcceptance.h  BasePDF.h  BasePDF_Framework.h  BasePDF_MCCaching.h  Blinder.h  ClassLookUp.h  CombinedMistagCalib.h  ComponentPlotter.h  ComponentPlotter_config.h  ComponentRef.h  ConstraintFunction.h  CorrectedCovariance.h  DataFileLoader.h  DataPoint.h  DataSetConfiguration.h  DebugClass.h  DoubleFixedResModel.h  DoubleResolutionModel.h  DummyResolutionModel.h  EdStyle.h  EfficiencyWeightPreCalculator.h  ExternalConstMatrix.h  ExternalConstraint.h  FitAssembler.h  FitFractionCalculator.h  FitFunction.h  FitFunctionConfiguration.h  FitResult.h  FitResultVector.h  FixedResolutionModel.h  Foam.h  FoamIntegrator.h  FumiliFunction.h  FumiliWrapper.h  FunctionContour.h  GoodnessOfFit.h  IConstraint.h  IConstraintFunction.h  (+97 more)
framework/src/: AcceptReject.cpp  AngularAcceptance.cpp  BasePDF.cpp  BasePDF_Framework.cpp  BasePDF_MCCaching.cpp  Blinder.cpp  ClassLookUp.cpp  CombinedMistagCalib.cpp  ComponentPlotter.cpp  ComponentRef.cpp  ConstraintFunction.cpp  CorrectedCovariance.cpp  DataFileLoader.cpp  DataPoint.cpp  DataSetConfiguration.cpp  DebugClass.cpp  DoubleFixedResModel.cpp  DoubleResolutionModel.cpp  DummyResolutionModel.cpp  EdStyle.cpp  EfficiencyWeightPreCalculator.cpp  ExternalConstMatrix.cpp  ExternalConstraint.cpp  FitAssembler.cpp  FitFractionCalculator.cpp  FitFunction.cpp  FitFunctionConfiguration.cpp  FitResult.cpp  FitResultVector.cpp  FixedResolutionModel.cpp  Foam.cpp  FoamIntegrator.cpp  FumiliFunction.cpp  FumiliWrapper.cpp  FunctionContour.cpp  GoodnessOfFit.cpp  IPDF.cpp  InputParsing.cpp  IntegratorFunction.cpp  InvalidObject.cpp  (+78 more)
new_scripts/: 1DLL_FCScan_From_XML.py  1DLL_Scan_From_XML.py  2DLL_Scan_From_XML.py  FC_Scans.py  GetDiracJobIDFromGanga.py  GetDiracOutput.py.notsupported  GetDiracOutput.sh  OutputScripts.sh  SingleFitOnGrid.py  TOYS.py
pdfs/CVS/: Repository
pdfs/configdata/: 2010-timeAcceptance-wUpper.txt  2011-1fb-backgroundangles-0p0-v1.root  2011-1fb-backgroundangles-0p3-v1-hel.root  2011-1fb-backgroundangles-0p3to0p5-v1-hel.root  2011-1fb-backgroundangles-0p3to0p5-v1.root  2011-1fb-backgroundangles-0p5-v1-hel.root  2011-1fb-backgroundangles-0p5-v1.root  2011-1fb-timeAcceptance-v1.txt  2011-1fb-timeAcceptance-v2.txt  2011-1fb-timeAcceptance-v5-Bs-20b.txt  2011-1fb-timeAcceptance-v5-Bs-40b.txt  2011-1fb-timeAcceptance-v5-Bu-20b.txt  2011-1fb-timeAcceptance-v5-Bu-40b.txt  2011-JPsiPhi-backgroundangles-loose.root  2011-JPsiPhi-backgroundangles-tight-II-10x10x10.root  2011-JPsiPhi-backgroundangles-tight-II-7x5x11.root  2011-JPsiPhi-backgroundangles-tight-II-7x5x9.root  2011-JPsiPhi-backgroundangles-tight-II.root  (+71 more)
scripts/: AddRapidFitInfo.C  AddRapidFitInfoToHeidelberg.C  ApplySelection.C  CalculateAverageAcceptanceNumbers.py  CreateAcceptanceHistogram.py  CreateNtupleFromAscii.py  CreateNtupleWithCorrectObservableNames.py  DumpBranch.C  FC_Scans.py  File_1DLL_Scan.py  File_2DLL_Scan.py  FindROOT.cmake  GangaJobForEdinburghCondor.py  Ganga_FC.py  Ganga_GRID.py  Ganga_GRID_FC.py  Ganga_TOYS_ECDF.py  Ganga_sWave.py  PlotRapidVar.C  PrintLatexTableOfPullResults.py  RapidFit.C  RapidFit_FC.C  RapidFit_TOYS.C  SaveProjectionPlots.py  TOY_1D_LL_Scans.py  TOY_2D_LL_Scans.py  TOY_STUDIES.py  ganga_run.py  generate-xml.sh  get_histogram.py  mkAngAccWeights.C  rapidresults.cc  runFit.sh  runRapidScripts.C  run_UnitTests.py  run_UnitTests_CONDOR.py  run_UnitTests_ECDF.py  run_UnitTests_GRID.py  runrapidfit.sh  runrapidfit_merge_scramble_toys.sh  (+1 more)
tutorials/: OptimisedDoubleGauss.xml  OptimisedDoubleGauss_ComponentProjections.xml  OptimisedDoubleGauss_ComponentProjectionsGSL.xml  OptimisedDoubleGauss_Projections.xml  OptimisedDoubleGauss_ProjectionsGSL.xml  OptimisedDoubleGauss_Scan.xml  OptimisedGauss.xml  PolyNomial.xml  SimpleDoubleGauss.xml  SimpleGauss.xml  SimpleGauss2D.xml  SimpleGauss3D.xml
(+596 files in other folders)
